Revision history for Ocsinventory NG Packager for MacOSX       

       * Add availibity to set generated package file name
0.2
       * Add a warning if no export path filled
       * Add French internationalization
       * Remove created ocspackage.pkg file if errors occurs while generating customizations
       * Fix mistakes in English.lproj/Localizable.strings and French.lproj/Localizable.strings
0.1
       * Initial release