@@ -1,5 +1,6 @@
 Revision history for Ocsinventory NG Packager for MacOSX       
 
+       * Create preupgrade script during package creation
        * Add availibity to set generated package file name
 0.2
        * Add a warning if no export path filled
